Tries to fix .phone on mobile screens

--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -930,6 +930,7 @@ nav {
     .phone {
       height: 475px;
       font-size: 1rem;
+      flex: none;
 
       input {
         width: 15em;
